@@ -6,6 +6,7 @@ v.1.2
 	Changing the interface of the form inputs - just CSS changes.
 	Adding a where clause at the 4th argument to the simple set_relation method.
 	Not supporting Codeigniter 1.7.x anymore.
+	Adding 3 new callbcaks, callback_upload, callback_before_upload, callback_after_upload.
 	RENAMING: callback_escape_insert to callback_insert and callback_escape_update to callback_update.
 	BUG fix - unset_jquery function now works properly.
 	BUG fix #9 - The form's clear functionallity don't work properly after the insert.
